--- a/app/src/main/res/layout/activity_repositories_list.xml
+++ b/app/src/main/res/layout/activity_repositories_list.xml
@@ -6,7 +6,7 @@
     tools:context="frogermcs.io.githubclient.ui.activity.RepositoriesListActivity"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvRepositories"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
